# chess-fracture

./: .gitattributes  .rsync-filter  README.md  TODO.md  docker-compose.yml
ansible/: .gitignore  README.md  ansible.cfg  architecture.md  inventory_sample.yml  play.yml  requirements.txt  setup.yml  setup_sample.yml
ansible/roles/chess-fracture/handlers/: main.yml
ansible/roles/chess-fracture/tasks/: django.yml  main.yml  nginx.yml  postgres.yml  turbovnc.yml
ansible/roles/chess-fracture/tests/: test.yml
ansible/roles/chess-fracture/vars/: main.yml
ansible/roles/chessfracture-common/handlers/: main.yml
ansible/roles/chessfracture-common/tasks/: django.yml  main.yml
blender/: .gitignore  Dockerfile  README  README.md  chess_fracture.py  chess_fracture_2.80.py  chess_fracture_template.blend  chess_fracture_template_2.80.blend  o4qX1cyD.pgn  testing
django/: bench.py  d.py  daemon.py  requirements.txt  tatrefthekiller.pgn  worker.py
django/mysite/: migrate_db.sh  reset_db.sh
django/mysite/chessfracture/: apps.py  forms.py  models.py  urls.py  views.py
django/mysite/mysite/: settings.py  urls.py
django/mysite/polls/: admin.py  models.py  views.py
host/: .gitignore  README.md  ansible.cfg  inventory  inventory.yml  inventory_sample.yml  play.yml  requirements.txt  run.sh  setup.sh  turbovnc-2.1.80.x86_64.rpm
nginx/: Dockerfile
webapp/: .gitignore  Cargo.toml  Dockerfile  README
webapp/src/: main.rs  test.rs
webapp/templates/: containers.html.hbs  download.html.hbs  error.html.hbs  get.html.hbs  header.hbs  index.html.hbs  refresh.html.hbs
(+99 files in other folders)
