[package]
name = "webapp"
version = "0.1.0"
authors = ["tatref <tatref@github.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7.0"
regex = "0.2"
reqwest = "0.8.5"
lazy_static = "1.0.0"



[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]

